# asjob

./: .gitignore  API_TEST_RESULTS.md  CHAT_API_REFACTORING_REPORT.md  DAO_REFACTORING_REPORT.md  Makefile  debug_config.py  debug_config2.py  env.example  pyproject.toml  test_api.py  test_frontend_request.py
.cursor/rules/: project.mdc  python.mdc
backend/: .dockerignore  Dockerfile  README.md  README_DAO.md  check_config.py  config.py  env.example  logger.py  main.py  pyproject.toml  quick_test.py  simple_test.py  start_with_db.py
backend/api/: __init__.py  chat.py  connector_api.py  knowledge_api.py  scheduler_api.py
backend/api/model/: __init__.py  chat.py  connector.py  knowledge.py  scheduler.py
backend/connectors/: base.py  doris.py  mysql.py
backend/database/: __init__.py  config.py  init_db.py  session.py
backend/database/dao/: __init__.py  chat.py  chat_dao.py  connector_dao.py  knowledge_dao.py  scheduler_dao.py
backend/database/model/: __init__.py  chat.py  connector.py  knowledge.py  scheduler.py
backend/database/schema/: __init__.py  connector_schema.py
backend/database/service/: __init__.py  connector_service.py  knowledge_service.py  scheduler_service.py
backend/infra/connectors/: __init__.py  doris.py  mysql.py
backend/infra/llm/: client.py
backend/scheduler/: __init__.py  manager.py
deploy/: README.md  deploy.sh  docker-compose.yaml
deploy/nginx/: nginx.conf
frontend/: .dockerignore  Dockerfile  README_CONNECTION_STRING.md  demo_connection_string.html  index.html  package-lock.json  package.json
frontend/src/: App.vue
(+5 files in other folders)
