[project]
name = "chatjob"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "pymysql>=1.1.1",
    "loguru>=0.7.3",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.6",
    "uvicorn>=0.35.0",
    "apscheduler>=3.10.4",
    "redis>=5.0.1",
]
